setup git, remove unused apps

--- a/local_env.yml
+++ b/local_env.yml
@@ -13,14 +13,12 @@
     - python
     - node
     - ruby
-    - hub
     - zsh-autoenv
     - rg
     - exa
     - bat
     - tmux
-    - git-flow
+    # - git-flow
     - fzf
-    - kubernetes
-    - jrnl
+    # - kubernetes
     - {role: macos, when: ansible_os_family == "Darwin"}
