--- a/roles/vim/tasks/mac.yml
+++ b/roles/vim/tasks/mac.yml
@@ -1,7 +1,10 @@
-# NOTE: The with-override-system-vim option ensures that you have an up-to-date terminal vim
-- name: Install Mac Vim
-  homebrew: name=macvim state=present install_options=with-python3,with-lua,with-luajit,with-override-system-vim
-  when: vim_install_macvim
+# # NOTE: The with-override-system-vim option ensures that you have an up-to-date terminal vim
+# - name: Install Mac Vim
+#   homebrew: name=macvim state=present install_options=with-python3,with-lua,with-luajit,with-override-system-vim
+#   when: vim_install_macvim
+
+- name: Install Vim
+  homebrew: name=vim state=present install_options=with-override-system-vi
 
 - name: Install exuberant-ctags (needed for TagBar plugin)
   homebrew: name=ctags-exuberant state=present
